cif/org.eclipse.escet.cif.tests/tests/event_based/dfa_minimize/empty_automaton.run.err
WARNING: File "event_based/dfa_minimize/empty_automaton.cif": Semantic warning at line 14, column 7: Automaton "p" has no initial location.
ERROR: Failed to apply DFA minimization for CIF file "event_based/dfa_minimize/empty_automaton.cif".
CAUSE: CIF DFA minimization tool failed due to unsatisfied preconditions:

  ----------------------------------------
  (1/1) Automaton has no initial location.
  ----------------------------------------
   * In the top-level scope of the specification:
     - plant automaton p:
                       ^
